@@ -5,7 +5,8 @@ Changelog
 1.6.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Package builder: make package version configurable.
+  [jone]
 
 
 1.6.1 (2015-05-20)
